--- a/package.json
+++ b/package.json
@@ -13,13 +13,8 @@
     "url": "git+https://github.com/baleada/docs.git"
   },
   "scripts": {
-    "empty-pages": "node scripts/emptyDir.js 'pages/docs'",
-    "meta": "npm run empty-pages && node scripts/generateMetafiles.js",
-    "gen-comp-reg": "node scripts/generateComponentRegistration.js 'example' && node scripts/generateComponentRegistration.js 'global'",
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
+    "dev": "vite",
+    "build": "vite build"
   },
   "bugs": {
     "url": "https://github.com/baleada/docs/issues"
@@ -27,13 +22,15 @@
   "homepage": "https://baleada.netlify.com",
   "license": "MIT",
   "devDependencies": {
-    "@baleada/markdown-it-prose-container": "^0.7.1",
+    "@baleada/markdown-it-prose-container": "^0.7.2",
     "@baleada/markdown-it-spa-links": "^0.5.3",
+    "@baleada/markdown-it-text-content": "0.0.1",
     "@baleada/prepare": "^0.2.11",
     "@baleada/rollup-plugin-source-transform": "^0.4.0",
     "@baleada/rollup-plugin-virtual": "0.0.1",
     "@baleada/source-transform-files-to-index": "^0.2.0",
     "@baleada/source-transform-files-to-routes": "^0.4.2",
+    "@baleada/source-transform-utils": "0.0.0",
     "@baleada/tailwind-linear-numeric": "^0.8.10",
     "@baleada/tailwind-theme": "^0.1.9",
     "@baleada/tailwind-theme-utils": "^0.4.2",
@@ -45,9 +42,15 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.9.0",
     "eslint-plugin-vue": "^7.0.0-beta.3",
+    "gitlog": "^4.0.0",
+    "gray-matter": "^4.0.2",
     "markdown-it": "^11.0.0",
+    "markdown-it-link-attributes": "^3.0.0",
+    "parse5": "^6.0.1",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.3",
+    "refractor": "^3.1.0",
+    "rehype": "^11.0.0",
     "tailwindcss": "^1.8.8",
     "typeface-caveat": "0.0.76",
     "typeface-inconsolata": "0.0.72",
