--- a/package.json
+++ b/package.json
@@ -38,20 +38,22 @@
     "@baleada/vite-serve-as-vue": "0.0.1",
     "@baleada/vite-serve-virtual": "0.0.0",
     "@tailwindcss/custom-forms": "^0.2.1",
+    "@vue/compiler-sfc": "^3.0.0",
+    "assign-symbols": "^2.0.2",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.9.0",
     "eslint-plugin-vue": "^7.0.0-beta.3",
     "gitlog": "^4.0.0",
     "gray-matter": "^4.0.2",
-    "markdown-it": "^11.0.0",
+    "markdown-it": "^11.0.1",
     "markdown-it-link-attributes": "^3.0.0",
     "parse5": "^6.0.1",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.3",
     "refractor": "^3.1.0",
     "rehype": "^11.0.0",
-    "tailwindcss": "^1.8.8",
+    "tailwindcss": "^1.8.10",
     "typeface-caveat": "0.0.76",
     "typeface-inconsolata": "0.0.72",
     "typeface-inter": "^3.15.0",
@@ -62,14 +64,14 @@
     "@baleada/animateable-utils": "0.0.0",
     "@baleada/listenable-gestures": "^0.4.2",
     "@baleada/logic": "^0.15.19",
-    "@baleada/vue-composition": "^0.8.2",
+    "@baleada/vue-composition": "^0.8.3",
     "@baleada/vue-eva-icons": "^1.0.0",
-    "@baleada/vue-features": "^0.4.0",
+    "@baleada/vue-features": "^0.4.2",
     "@baleada/vue-heroicons": "0.0.2",
-    "@baleada/vue-interface": "^0.6.3",
+    "@baleada/vue-interface": "^0.6.4",
     "@baleada/vue-prose": "^0.9.2",
     "@baleada/vue-simple-icons": "0.0.0",
-    "vue": "^3.0.0-rc.10",
+    "vue": "^3.0.0",
     "vue-router": "^4.0.0-beta.9"
   }
 }
