--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typeface-caveat": "0.0.76",
     "typeface-inconsolata": "0.0.72",
     "typeface-inter": "^3.15.0",
+    "typescript": "^4.1.3",
     "vite": "^1.0.0-rc.13"
   },
   "dependencies": {
