sketches async source transforms, sketches netlify cms support

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
+# Netlify CMS redirect
+[[redirects]]
+  from = "/admin"
+  to = "/admin/index.html"
+  status = 200
 # The following redirect is intended for use with most SPAs that handle
 # routing internally.
 [[redirects]]
