--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.12.10",
-    "@baleada/prepare": "^0.4.32",
+    "@baleada/logic": "^0.16.9",
+    "@baleada/prepare": "^0.4.33",
     "@baleada/source-transform-utils": "^0.1.0",
     "@vue/compiler-sfc": "^3.0.4",
     "gitlog": "^4.0.0",
