adds reactive SEO

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "@babel/runtime": "^7.12.5",
     "@baleada/recognizeable-handlers": "^0.5.0",
+    "@baleada/vue-features": "^0.5.4",
     "@baleada/vue-heroicons": "^0.0.2",
     "@baleada/vue-octicons": "^0.1.0",
     "@baleada/vue-prose": "^0.13.6",
