--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "empty-vite-cache": "trash node_modules/.vite_opt_cache"
   },
   "bugs": {
     "url": "https://github.com/baleada/docs/issues"
@@ -45,7 +46,7 @@
     "@baleada/vue-features": "^0.5.4",
     "@baleada/vue-heroicons": "^0.0.2",
     "@baleada/vue-octicons": "^0.1.0",
-    "@baleada/vue-prose": "^0.13.6",
+    "@baleada/vue-prose": "^0.13.7",
     "@baleada/vue-simple-icons": "^0.0.0",
     "vue": "^3.0.4",
     "vue-router": "^4.0.2"
