--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@baleada/logic": "^0.16.9",
     "@baleada/prepare": "^0.4.33",
     "@baleada/source-transform-utils": "^0.1.0",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@vitejs/plugin-vue": "^1.0.3",
     "@vue/compiler-sfc": "^3.0.4",
     "gitlog": "^4.0.0",
     "gray-matter": "^4.0.2",
@@ -38,15 +40,15 @@
     "typeface-inconsolata": "0.0.72",
     "typeface-inter": "^3.15.0",
     "typescript": "^4.1.3",
-    "vite": "^1.0.0-rc.13"
+    "vite": "^2.0.0-beta.3"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
     "@baleada/recognizeable-handlers": "^0.5.0",
-    "@baleada/vue-features": "^0.5.4",
+    "@baleada/vue-features": "^0.5.5",
     "@baleada/vue-heroicons": "^0.0.2",
     "@baleada/vue-octicons": "^0.1.0",
-    "@baleada/vue-prose": "^0.13.8",
+    "@baleada/vue-prose": "^0.13.9",
     "@baleada/vue-simple-icons": "^0.0.0",
     "vue": "^3.0.4",
     "vue-router": "^4.0.2"
