--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
   "dependencies": {
     "@babel/runtime": "^7.12.5",
     "@baleada/recognizeable-handlers": "^0.5.1",
+    "@baleada/vue-composition": "^0.8.12",
     "@baleada/vue-features": "^0.5.5",
     "@baleada/vue-heroicons": "^0.0.2",
     "@baleada/vue-octicons": "^0.1.0",
-    "@baleada/vue-prose": "^0.13.9",
+    "@baleada/vue-prose": "^0.13.12",
     "@baleada/vue-simple-icons": "^0.0.0",
     "vue": "^3.0.4",
     "vue-router": "^4.0.2"
