--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@baleada/logic": "^0.16.9",
+    "@baleada/markdown-it-prose-container": "^0.8.4",
     "@baleada/prepare": "^0.4.33",
     "@baleada/source-transform-utils": "^0.1.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
@@ -49,7 +50,7 @@
     "@baleada/vue-features": "^0.5.5",
     "@baleada/vue-heroicons": "^0.0.2",
     "@baleada/vue-octicons": "^0.1.0",
-    "@baleada/vue-prose": "^0.13.12",
+    "@baleada/vue-prose": "^0.13.14",
     "@baleada/vue-simple-icons": "^0.0.0",
     "vue": "^3.0.4",
     "vue-router": "^4.0.2"
