--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "typeface-inconsolata": "0.0.72",
     "typeface-inter": "^3.15.0",
     "typescript": "^4.1.3",
-    "vite": "^2.0.0-beta.3"
+    "vite": "^2.0.0-beta.15"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
@@ -49,8 +49,9 @@
     "@baleada/vue-composition": "^0.8.12",
     "@baleada/vue-features": "^0.5.5",
     "@baleada/vue-heroicons": "^0.0.2",
+    "@baleada/vue-interface": "^0.7.5",
     "@baleada/vue-octicons": "^0.1.0",
-    "@baleada/vue-prose": "^0.13.17",
+    "@baleada/vue-prose": "^0.13.19",
     "@baleada/vue-simple-icons": "^0.0.0",
     "vue": "^3.0.4",
     "vue-router": "^4.0.2"
