--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "@babel/core": "^7.12.10",
     "@baleada/logic": "^0.16.9",
     "@baleada/markdown-it-prose-container": "^0.8.4",
-    "@baleada/prepare": "^0.4.34",
+    "@baleada/prepare": "^0.4.36",
     "@baleada/source-transform-utils": "^0.1.0",
     "@rollup/plugin-node-resolve": "^11.0.1",
     "@vitejs/plugin-vue": "^1.0.3",
     "@vue/compiler-sfc": "^3.0.4",
     "gitlog": "^4.0.0",
     "gray-matter": "^4.0.2",
+    "postcss-cli": "^8.3.1",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.3",
     "postcss-preset-env": "^6.7.0",
