--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@baleada/markdown-it-prose-container": "^0.8.4",
     "@baleada/prepare": "^0.4.38",
     "@baleada/source-transform-utils": "^0.1.0",
+    "@fontsource/inter": "^4.1.0",
     "@vue/compiler-sfc": "^3.0.5",
     "gitlog": "^4.0.0",
     "gray-matter": "^4.0.2",
     "postcss-cli": "^8.3.1",
     "typeface-caveat": "0.0.76",
     "typeface-inconsolata": "0.0.72",
-    "typeface-inter": "^3.15.0",
     "vite": "^2.0.0-beta.16"
   },
   "dependencies": {
@@ -41,11 +41,11 @@
     "@baleada/logic": "^0.16.13",
     "@baleada/recognizeable-handlers": "^0.5.1",
     "@baleada/vue-composition": "^0.8.12",
-    "@baleada/vue-features": "^0.5.5",
+    "@baleada/vue-features": "^0.5.9",
     "@baleada/vue-heroicons": "^0.1.2",
-    "@baleada/vue-interface": "^0.7.5",
+    "@baleada/vue-interface": "^0.7.8",
     "@baleada/vue-octicons": "^0.1.0",
-    "@baleada/vue-prose": "^0.13.21",
+    "@baleada/vue-prose": "^0.13.23",
     "@baleada/vue-simple-icons": "^0.0.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.2"
