--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
+    "@baleada/animateable-utils": "^0.0.2",
     "@baleada/logic": "^0.16.13",
     "@baleada/recognizeable-handlers": "^0.5.1",
     "@baleada/vue-composition": "^0.8.12",
