--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@baleada/prepare": "^0.4.42",
     "@baleada/source-transform-utils": "^0.1.0",
     "@fontsource/inter": "^4.1.0",
+    "@tailwindcss/jit": "^0.1.1",
     "@vue/compiler-sfc": "^3.0.5",
     "gitlog": "^4.0.0",
     "gray-matter": "^4.0.2",
@@ -39,10 +40,10 @@
   "dependencies": {
     "@babel/runtime": "^7.12.5",
     "@baleada/animateable-utils": "^0.0.2",
-    "@baleada/logic": "^0.17.2",
+    "@baleada/logic": "^0.18.0",
     "@baleada/recognizeable-handlers": "^0.5.1",
-    "@baleada/vue-composition": "^0.8.17",
-    "@baleada/vue-features": "^0.8.0",
+    "@baleada/vue-composition": "^0.9.0",
+    "@baleada/vue-features": "^0.8.1",
     "@baleada/vue-heroicons": "^0.1.2",
     "@baleada/vue-interface": "^0.8.0",
     "@baleada/vue-octicons": "^0.1.0",
