--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "empty-vite-cache": "trash node_modules/.vite_opt_cache"
+    "empty-vite-cache": "trash node_modules/.vite"
   },
   "bugs": {
     "url": "https://github.com/baleada/docs/issues"
@@ -35,7 +35,7 @@
     "postcss-cli": "^8.3.1",
     "typeface-caveat": "0.0.76",
     "typeface-inconsolata": "0.0.72",
-    "vite": "^2.0.0-beta.16"
+    "vite": "^2.5.3"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
