--- a/package.json
+++ b/package.json
@@ -25,31 +25,35 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@baleada/markdown-it-prose-container": "^0.8.4",
-    "@baleada/prepare": "^0.4.42",
+    "@baleada/prepare": "^0.5.12",
     "@baleada/source-transform-utils": "^0.1.0",
     "@fontsource/inter": "^4.1.0",
     "@tailwindcss/jit": "^0.1.1",
-    "@vue/compiler-sfc": "^3.0.5",
+    "@vue/compiler-sfc": "^3.2.8",
+    "fast-glob": "^3.2.7",
     "gitlog": "^4.0.0",
     "gray-matter": "^4.0.2",
     "postcss-cli": "^8.3.1",
     "typeface-caveat": "0.0.76",
     "typeface-inconsolata": "0.0.72",
-    "vite": "^2.5.3"
+    "vite": "^2.5.3",
+    "vue-tsc": "^0.3.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "@baleada/animateable-utils": "^0.0.2",
-    "@baleada/logic": "^0.18.0",
+    "@baleada/animateable-utils": "^0.1.0",
+    "@baleada/logic": "^0.20.7",
     "@baleada/recognizeable-handlers": "^0.5.1",
-    "@baleada/vue-composition": "^0.9.0",
-    "@baleada/vue-features": "^0.8.1",
+    "@baleada/vue-composition": "^0.10.3",
+    "@baleada/vue-features": "^0.9.0",
     "@baleada/vue-heroicons": "^0.1.2",
     "@baleada/vue-interface": "^0.8.0",
     "@baleada/vue-octicons": "^0.1.0",
     "@baleada/vue-prose": "^0.13.26",
     "@baleada/vue-simple-icons": "^0.0.0",
-    "vue": "^3.0.5",
+    "esbuild": "^0.12.25",
+    "esbuild-register": "^3.0.0",
+    "vue": "^3.2.8",
     "vue-router": "^4.0.2"
   }
 }
