--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@baleada/markdown-it-prose-container": "^0.8.4",
-    "@baleada/prepare": "^0.5.12",
+    "@baleada/prepare": "^0.5.14",
     "@baleada/source-transform-utils": "^0.1.0",
     "@fontsource/inter": "^4.1.0",
     "@tailwindcss/jit": "^0.1.1",
@@ -42,17 +42,19 @@
   "dependencies": {
     "@babel/runtime": "^7.12.5",
     "@baleada/animateable-utils": "^0.1.0",
-    "@baleada/logic": "^0.20.7",
+    "@baleada/logic": "^0.20.9",
+    "@baleada/markdown-it-text-content": "^0.2.0",
     "@baleada/recognizeable-handlers": "^0.5.1",
     "@baleada/vue-composition": "^0.10.3",
-    "@baleada/vue-features": "^0.9.0",
+    "@baleada/vue-features": "^0.9.1",
     "@baleada/vue-heroicons": "^0.1.2",
     "@baleada/vue-interface": "^0.8.0",
     "@baleada/vue-octicons": "^0.1.0",
-    "@baleada/vue-prose": "^0.13.26",
+    "@baleada/vue-prose": "^0.14.2",
     "@baleada/vue-simple-icons": "^0.0.0",
     "esbuild": "^0.12.25",
     "esbuild-register": "^3.0.0",
+    "typescript": "^4.4.3",
     "vue": "^3.2.8",
     "vue-router": "^4.0.2"
   }
