--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@baleada/prepare": "^0.5.14",
     "@baleada/source-transform-utils": "^0.1.0",
     "@fontsource/inter": "^4.1.0",
-    "@tailwindcss/jit": "^0.1.1",
     "@vue/compiler-sfc": "^3.2.8",
     "fast-glob": "^3.2.7",
     "gitlog": "^4.0.0",
@@ -36,7 +35,7 @@
     "postcss-cli": "^8.3.1",
     "typeface-caveat": "0.0.76",
     "typeface-inconsolata": "0.0.72",
-    "vite": "^2.5.3",
+    "vite": "^2.5.6",
     "vue-tsc": "^0.3.0"
   },
   "dependencies": {
@@ -54,6 +53,8 @@
     "@baleada/vue-simple-icons": "^0.0.0",
     "esbuild": "^0.12.25",
     "esbuild-register": "^3.0.0",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.15",
     "typescript": "^4.4.3",
     "vue": "^3.2.8",
     "vue-router": "^4.0.2"
