--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "vue-tsc": "^0.3.0"
   },
   "dependencies": {
+    "@alexvipond/mulago-foundation-portfolio": "*",
     "@babel/runtime": "^7.12.5",
     "@baleada/animateable-utils": "^0.1.0",
-    "@baleada/logic": "^0.20.11",
+    "@baleada/logic": "^0.20.25",
     "@baleada/recognizeable-effects": "^0.7.2",
-    "@baleada/vue-composition": "^0.10.5",
-    "@baleada/vue-features": "^0.10.3",
+    "@baleada/vue-composition": "^0.10.8",
+    "@baleada/vue-features": "^0.10.5",
     "@baleada/vue-heroicons": "^0.1.2",
     "@baleada/vue-interface": "^0.8.0",
     "@baleada/vue-octicons": "^0.1.0",
