--- a/package.json
+++ b/package.json
@@ -23,41 +23,36 @@
   "homepage": "https://baleada.netlify.com",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@baleada/markdown-it-prose-container": "^0.8.4",
     "@baleada/markdown-it-text-content": "^0.2.0",
-    "@baleada/prepare": "^0.5.16",
-    "@baleada/source-transform-utils": "^0.1.0",
-    "@fontsource/inter": "^4.1.0",
-    "@vue/compiler-sfc": "^3.2.11",
-    "esbuild": "^0.12.26",
-    "esbuild-register": "^3.0.0",
-    "fast-glob": "^3.2.7",
-    "gitlog": "^4.0.0",
-    "gray-matter": "^4.0.2",
-    "postcss": "^8.3.6",
-    "postcss-cli": "^8.3.1",
-    "tailwindcss": "^2.2.15",
-    "typeface-caveat": "0.0.76",
-    "typeface-inconsolata": "0.0.72",
-    "typescript": "^4.4.3",
-    "vite": "^2.5.6",
-    "vue-tsc": "^0.3.0"
+    "@baleada/prepare": "^0.5.22",
+    "@fontsource/caveat": "^4.5.7",
+    "@fontsource/inconsolata": "^4.5.6",
+    "@fontsource/inter": "^4.5.11",
+    "autoprefixer": "^10.4.7",
+    "esbuild": "^0.14.47",
+    "esbuild-register": "^3.3.3",
+    "fast-glob": "^3.2.11",
+    "gitlog": "^4.0.4",
+    "gray-matter": "^4.0.3",
+    "postcss-import": "^14.1.0",
+    "postcss-nested": "^5.0.6",
+    "tailwindcss": "^3.1.4",
+    "typescript": "^4.7.4",
+    "vite": "^2.9.13",
+    "vue-tsc": "^0.38.2"
   },
   "dependencies": {
-    "@alexvipond/mulago-foundation-portfolio": "*",
-    "@babel/runtime": "^7.12.5",
-    "@baleada/animateable-utils": "^0.1.0",
-    "@baleada/logic": "^0.20.30",
-    "@baleada/recognizeable-effects": "^0.7.2",
-    "@baleada/vue-composition": "^0.10.8",
-    "@baleada/vue-features": "^0.11.7",
+    "@alexvipond/mulago-foundation-portfolio": "^0.0.2",
+    "@babel/runtime": "^7.18.6",
+    "@baleada/logic": "^0.22.3",
+    "@baleada/recognizeable-effects": "^0.8.3",
+    "@baleada/vue-composition": "^0.10.11",
+    "@baleada/vue-features": "^0.13.1",
     "@baleada/vue-heroicons": "^0.1.2",
-    "@baleada/vue-interface": "^0.8.0",
     "@baleada/vue-octicons": "^0.1.0",
     "@baleada/vue-prose": "^0.14.14",
     "@baleada/vue-simple-icons": "^0.0.0",
-    "vue": "^3.2.11",
-    "vue-router": "^4.0.11"
+    "vue": "^3.2.37",
+    "vue-router": "^4.0.16"
   }
 }
