--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@fontsource/inconsolata": "^4.5.10",
     "@fontsource/inter": "^4.5.15",
     "autoprefixer": "^10.4.13",
+    "dotenv": "^16.3.1",
     "esbuild": "^0.17.8",
     "esbuild-register": "^3.4.2",
     "fast-glob": "^3.2.12",
